--- a/www/index.html
+++ b/www/index.html
@@ -1,13 +1,15 @@
 <!doctype html>
 <html lang="en-US">
-
     <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <link id="bootstrap" rel="stylesheet" href="bootstrap-5.3.1-dist/css/bootstrap.min.css" />
     <script src="bootstrap-5.3.1-dist/js/bootstrap.bundle.min.js" defer></script>
     <link id="material-symbols" rel="stylesheet" href="material-symbols-0.10.3/font/400/outlined.css" />
-    <script src="app.min.js" defer></script>
+    <script src="react-18.2/react.production.min.js" defer></script>
+    <script src="react-18.2/react-dom.production.min.js" defer></script>
+
+    <script src="app.js" defer></script>
     </head>
 
     <body>
