--- a/www/index.html
+++ b/www/index.html
@@ -3,16 +3,25 @@
     <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
-    <link id="bootstrap" rel="stylesheet" href="bootstrap-5.3.1-dist/css/bootstrap.min.css" />
-    <script src="bootstrap-5.3.1-dist/js/bootstrap.bundle.min.js" defer></script>
-    <link id="material-symbols" rel="stylesheet" href="material-symbols-0.10.3/font/400/outlined.css" />
-    <script src="react-18.2/react.production.min.js" defer></script>
-    <script src="react-18.2/react-dom.production.min.js" defer></script>
+    <link id="bootstrap" rel="stylesheet" href="resources/bootstrap.min.css" />
+    <link id="material-symbols" rel="stylesheet" href="resources/material-symbols-outlined.css" />
 
-    <script src="app.js" defer></script>
     </head>
 
     <body>
         <div id="root"></div>
+        <script id="react" src="resources/react.production.min.js"></script>
+        <script id="react-dom" src="resources/react-dom.production.min.js"></script>
+        <script id="react-bootstrap" src="resources/react-bootstrap.min.js"></script>
+        <script>
+            document.body.appendChild((() => {
+                let src = ((new URLSearchParams(document.location.search)).get('app') || 'app') + '.js'
+                let el = document.createElement('script')
+                el.setAttribute('id', 'app')
+                el.setAttribute('defer', '')
+                el.setAttribute('src', src)
+                return el
+            })())
+        </script>
     </body>
 </html>
