--- a/www/index.html
+++ b/www/index.html
@@ -5,23 +5,38 @@
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <link id="bootstrap" rel="stylesheet" href="resources/bootstrap.min.css" />
     <link id="material-symbols" rel="stylesheet" href="resources/material-symbols-outlined.css" />
-
+    <style>
+        html, body {
+            height: 100%;
+        }
+    </style>
+    <script defer id="react" src="resources/react.production.min.js"></script>
+    <script defer id="react-dom" src="resources/react-dom.production.min.js"></script>
+    <script defer id="react-bootstrap" src="resources/react-bootstrap.min.js"></script>
+    <script>
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('service-worker.js');
+        }
+        window.addEventListener('load', () => {
+            document.body.appendChild((() => {
+            let src = ((new URLSearchParams(document.location.search)).get('app') || 'app') + '.js'
+            let el = document.createElement('script')
+            el.setAttribute('id', 'app')
+            el.setAttribute('defer', '')
+            el.setAttribute('src', src)
+            return el
+        })())
+        })
+    </script>
     </head>
 
     <body>
-        <div id="root"></div>
-        <script id="react" src="resources/react.production.min.js"></script>
-        <script id="react-dom" src="resources/react-dom.production.min.js"></script>
-        <script id="react-bootstrap" src="resources/react-bootstrap.min.js"></script>
-        <script>
-            document.body.appendChild((() => {
-                let src = ((new URLSearchParams(document.location.search)).get('app') || 'app') + '.js'
-                let el = document.createElement('script')
-                el.setAttribute('id', 'app')
-                el.setAttribute('defer', '')
-                el.setAttribute('src', src)
-                return el
-            })())
-        </script>
+        <div id="root" class="h-100">
+            <div class="h-100 d-flex align-items-center justify-content-center">
+            <div class="spinner-border text-center" role="status" style="width:5rem;height:5rem">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+            </div>
+        </div>
     </body>
 </html>
