remove react-bootstrap, add react-tooltip

--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <link id="bootstrap" rel="stylesheet" href="resources/bootstrap.min.css" />
     <link id="material-symbols" rel="stylesheet" href="resources/material-symbols-outlined.css" />
+    <link id="react-tooltip-css" rel="stylesheet" href="resources/react-tooltip.min.css" />
     <style>
         html, body {
             height: 100%;
@@ -12,7 +13,7 @@
     </style>
     <script defer id="react" src="resources/react.production.min.js"></script>
     <script defer id="react-dom" src="resources/react-dom.production.min.js"></script>
-    <script defer id="react-bootstrap" src="resources/react-bootstrap.min.js"></script>
+    <script defer id="react-tooltip" src="resources/react-tooltip.umd.min.js"></script>
     <script>
         // if ('serviceWorker' in navigator) {
         //     navigator.serviceWorker.register('service-worker.js');
